<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="297dp"
        android:layout_height="388dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/login_card"
        android:paddingTop="25dp">

        <ImageView
            android:id="@+id/img_calingo"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/img_description"
            android:src="@drawable/logo_calingo" />

        <TextView
            android:id="@+id/txt_entrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/login_text"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="235dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/input_background"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="235dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_background"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/entrar_bt"
            style="@style/CustomButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:minWidth="120dp"
            android:text="@string/login_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cadastro_bt"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:minWidth="80dp"
            android:text="Cadastrar"
            android:textSize="12sp"
            android:fontFamily="@font/inter_regular"
            android:backgroundTint="@android:color/transparent"
            android:textColor="@android:color/black"
            android:elevation="0dp"
            android:stateListAnimator="@null"/>





    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
